# rag-medical-app

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  try.ipynb
.github/workflows/: workflow.yaml
github/workflows/: workflow.yaml
src/: models.py  prompts.py  rag.py  utils.py  vector_store.py
